// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple-routes build and serve should generate the expected files 1`] = `
Object {
  "388-39ddc85fb494bd9028a1.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "AsyncComponent-bdc9f06c38f9e7d5ba74.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Details-05149710341a0d54f413.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Details-c356fae1fa4d368326f6.css": ._itmq_4 {
  color: blue;
}
,
  "handlers-Home-9e1535f8f6d80e362b81.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Home-b6a3922b82ffa6cd563b.css": .QyseV26 {
  color: red;
}
,
  "main-0df909eed98e56f21f4a.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "production/au/details/$id/index.html": SCRIPTS: Array [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime-c649bb7722fe364bf412.js",
    "/static/place/388-39ddc85fb494bd9028a1.js",
    "/static/place/main-0df909eed98e56f21f4a.js",
    "/static/place/handlers-Details-05149710341a0d54f413.js",
    "/static/place/AsyncComponent-bdc9f06c38f9e7d5ba74.js",
  ]
CSS: Array [
    "/static/place/handlers-Details-c356fae1fa4d368326f6.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Details"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Details"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
    <link data-chunk="AsyncComponent"
          rel="preload"
          as="script"
          href="scripts[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_itmq_4">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"au"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      [247,100]
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Details"
            src="scripts[4]"
    >
    </script>
    <script async
            data-chunk="AsyncComponent"
            src="scripts[5]"
    >
    </script>
  </body>
</html>,
  "production/au/index.html": SCRIPTS: Array [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime-c649bb7722fe364bf412.js",
    "/static/place/388-39ddc85fb494bd9028a1.js",
    "/static/place/main-0df909eed98e56f21f4a.js",
    "/static/place/handlers-Home-9e1535f8f6d80e362b81.js",
  ]
CSS: Array [
    "/static/place/handlers-Home-b6a3922b82ffa6cd563b.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Home"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Home"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="QyseV26">
        Welcome to the Home page - au
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"au"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      [507]
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Home"
            src="scripts[4]"
    >
    </script>
  </body>
</html>,
  "production/nz/nz/details/$id/index.html": SCRIPTS: Array [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime-c649bb7722fe364bf412.js",
    "/static/place/388-39ddc85fb494bd9028a1.js",
    "/static/place/main-0df909eed98e56f21f4a.js",
    "/static/place/handlers-Details-05149710341a0d54f413.js",
    "/static/place/AsyncComponent-bdc9f06c38f9e7d5ba74.js",
  ]
CSS: Array [
    "/static/place/handlers-Details-c356fae1fa4d368326f6.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Details"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Details"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
    <link data-chunk="AsyncComponent"
          rel="preload"
          as="script"
          href="scripts[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_itmq_4">
        Welcome to the Details page - nz
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"nz"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      [247,100]
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Details"
            src="scripts[4]"
    >
    </script>
    <script async
            data-chunk="AsyncComponent"
            src="scripts[5]"
    >
    </script>
  </body>
</html>,
  "production/nz/nz/index.html": SCRIPTS: Array [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime-c649bb7722fe364bf412.js",
    "/static/place/388-39ddc85fb494bd9028a1.js",
    "/static/place/main-0df909eed98e56f21f4a.js",
    "/static/place/handlers-Home-9e1535f8f6d80e362b81.js",
  ]
CSS: Array [
    "/static/place/handlers-Home-b6a3922b82ffa6cd563b.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Home"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Home"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="QyseV26">
        Welcome to the Home page - nz
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"nz"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      [507]
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Home"
            src="scripts[4]"
    >
    </script>
  </body>
</html>,
  "runtime-c649bb7722fe364bf412.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`multiple-routes build and serve should return details page 1`] = `
SCRIPTS: Array [
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
  "/static/place/runtime-c649bb7722fe364bf412.js",
  "/static/place/388-39ddc85fb494bd9028a1.js",
  "/static/place/main-0df909eed98e56f21f4a.js",
  "/static/place/handlers-Details-05149710341a0d54f413.js",
  "/static/place/AsyncComponent-bdc9f06c38f9e7d5ba74.js",
]
CSS: Array [
  "/static/place/handlers-Details-c356fae1fa4d368326f6.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Details"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Details"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
    <link data-chunk="AsyncComponent"
          rel="preload"
          as="script"
          href="scripts[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_itmq_4">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"au"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      [247,100]
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Details"
            src="scripts[4]"
    >
    </script>
    <script async
            data-chunk="AsyncComponent"
            src="scripts[5]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
   <body>
     <div id="app">
       <h1 class="_itmq_4">
-        Welcome to the Details page - au
+        Welcome to the Details page - auID: 123
         <span>
           Some special async content
         </span>

`;

exports[`multiple-routes build and serve should return home page 1`] = `
SCRIPTS: Array [
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
  "/static/place/runtime-c649bb7722fe364bf412.js",
  "/static/place/388-39ddc85fb494bd9028a1.js",
  "/static/place/main-0df909eed98e56f21f4a.js",
  "/static/place/handlers-Home-9e1535f8f6d80e362b81.js",
]
CSS: Array [
  "/static/place/handlers-Home-b6a3922b82ffa6cd563b.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Home"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Home"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="QyseV26">
        Welcome to the Home page - au
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"au"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      [507]
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Home"
            src="scripts[4]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;

exports[`multiple-routes start should render details page correctly 1`] = `
SCRIPTS: Array [
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
  "/runtime.js",
  "/vendors-node_modules_loadable_component_dist_loadable_esm_js-node_modules_pmmmwh_react-refres-8c2ce9.js",
  "/main.js",
  "/handlers-Details.js",
  "/AsyncComponent.js",
]
CSS: Array [
  "/handlers-Details.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Details"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Details"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
    <link data-chunk="AsyncComponent"
          rel="preload"
          as="script"
          href="scripts[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="Details__root____itmq_4">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"au"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      ["handlers-Details","AsyncComponent"]
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Details"
            src="scripts[4]"
    >
    </script>
    <script async
            data-chunk="AsyncComponent"
            src="scripts[5]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
   <body>
     <div id="app">
       <h1 class="Details__root____itmq_4">
-        Welcome to the Details page - au
+        Welcome to the Details page - auID: 123
         <span>
           Some special async content
         </span>

`;

exports[`multiple-routes start should render home page correctly 1`] = `
SCRIPTS: Array [
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
  "/runtime.js",
  "/vendors-node_modules_loadable_component_dist_loadable_esm_js-node_modules_pmmmwh_react-refres-8c2ce9.js",
  "/main.js",
  "/handlers-Home.js",
]
CSS: Array [
  "/handlers-Home.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Home"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Home"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="Home__root___QyseV26">
        Welcome to the Home page - au
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"au"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      ["handlers-Home"]
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Home"
            src="scripts[4]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;
